--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
+    "next-auth": "^4.24.6",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1"
