--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
-    "@prisma/client": "^5.22.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.22.0",
+    "clsx": "^2.1.1",
     "next-auth": "^4.24.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
